--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,21 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(rqt_face)
 
-find_package(catkin REQUIRED COMPONENTS)
+find_package(catkin REQUIRED COMPONENTS
+  message_generation
+)
 
 catkin_python_setup()
-catkin_package()
+
+add_message_files(
+  FILES
+  Emotion.msg
+  Gaze.msg
+)
+
+generate_messages(DEPENDENCIES)
+
+catkin_package(CATKIN_DEPENDS message_runtime)
 
 install(FILES plugin.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
