--- a/package.xml
+++ b/package.xml
@@ -8,9 +8,12 @@
   <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>rqt_gui</run_depend>
   <run_depend>rqt_gui_py</run_depend>
+  <run_depend>std_msgs</run_depend>
 
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml" />
